--- a/components/header.html
+++ b/components/header.html
@@ -1,8 +1,5 @@
 <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
+  <img src="/assets/images/logo.png" alt="Logo da Alura">
+  
 </nav>
   
