--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+:root {
+    --cor-primaria: #0A3871;
+    --cor-secundaria: #F3F5FC;
+    /*--cor-terciaria: #F3F5FC;
+    --cor-quaternaria: #FFFFFF;*/
+
+    --cor-fonte-primaria: #0A3871;
+    --cor-fonte-secundaria: #495057;
+    --cor-fonte-terciaria: #343A40;
+    --cor-fonte-quaternaria: #FFFFFF;
+
+    
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     height: 100vh;
     box-sizing: border-box;
-    background-color: #E5E5E5;
+    background-color: var(--cor-secundaria);
     font-family: "Inter", sans-serif;
 }
 
 .apresentacao {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+}
+
+.header__menu {
+    width: 80px;
+    display: flex;
+    flex-direction: column;
+    /*justify-content: center*/;
+    
 }
 
 .apresentacao__principal {
@@ -22,30 +49,34 @@ body {
     flex-direction: column;
 }
 
+.apresentacao__principal__entrada__conteudo {
+    color: var(--cor-fonte-primaria);
+    font-size: 1.5rem;
+}
+
 .apresentacao__principal__entrada__observacao {
     display: flex;
     justify-content: left;
-    align-items: center;
+    align-content: center;
 }
 
 .apresentacao__principal__entrada__observacao__iconeAtencao {
     background-color: #65747D;
-    color: #FFFFFF;
+    color: white;
     width: 16px;
     height: 16px;
     border-radius: 8px;
     text-align: center;
-    vertical-align: middle;
 }
 
 .apresentacao__principal__entrada__observacao__texto {
-    color: #495057;
-    font-size: 12px;
+    color: var(--cor-fonte-secundaria);
+    font-size: 0.75rem;
     font-weight: 400;
 }
 
 .apresentacao__principal__saida {
-    background-color: #FFFFFF;
+    background-color: white;
     border-radius: 32px;
     display: flex;
     flex-direction: column;
@@ -54,11 +85,17 @@ body {
 }
 
 .apresentacao__principal__saida__titulo {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
+    color: var(--cor-fonte-terciaria);
 }
 
 .apresentacao__principal__saida__descricao {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
+    color: var(--cor-fonte-secundaria);
 }
+
+/*.footer {
+
+}*/
