--- a/components/header.html
+++ b/components/header.html
@@ -1,5 +1,12 @@
-<nav class="header__menu">
-  <img src="/assets/images/logo.png" alt="Logo da Alura">
-  
+<nav class="cabecalho__menu">
+  <div class="cabecalho__menu__logo">
+    <img class="cabecalho__menu__logo__imagem" src="/assets/images/logo.png" alt="Logo da Alura">
+  </div>
+  <div class="cabecalho__menu__opcao">
+    <div class="cabecalho__menu__opcao__seletor"></div>
+  </div>
+  <div class="cabecalho__menu__opcao">
+    <div class="cabecalho__menu__opcao__seletor"></div>
+  </div>
 </nav>
   
