--- a/components/entrada.html
+++ b/components/entrada.html
@@ -1,11 +1,14 @@
-<section class="apresentacao__entrada">
+<section class="entrada">
     <form action="">
-        <input type="textarea" placeholder="Digite seu texto">
-        <div class="apresentacao__entrada__observacao">
-        <p class="apresentacao__entrada__observacao__iconeAtencao">!</p>
-        <p class="apresentacao__entrada__observacao__texto">Apenas letras minúsculas e sem acento.</p>
+        <textarea class="entrada__campo">
+            Digite seu texto
+        </textarea>
+
+        <div class="entrada__observacao">
+        <p class="entrada__observacao__iconeAtencao">!</p>
+        <p class="entrada__observacao__texto">Apenas letras minúsculas e sem acento.</p>
         </div>
-        <div>
+        <div class="entrada__botoes">
         <button type="submit" value="Criptografar">Criptografar</button>
         <button type="submit" value="Descriptografar">Descriptografar</button>
         </div>
