--- a/components/saida.html
+++ b/components/saida.html
@@ -1,3 +1,3 @@
-<section class="apresentacao__saida">
-    <div id="apresentacao__saida__conteudo"></div>
+<section class="saida">
+    <div id="saida__conteudo"></div>
 </section>
