Estilizar botões de criptografar/descriptografar

--- a/components/entrada.html
+++ b/components/entrada.html
@@ -1,16 +1,12 @@
-<section class="entrada">
-    <form action="">
-        <textarea class="entrada__campo">
-            Digite seu texto
-        </textarea>
+<form class="entrada" action="">
+    <textarea class="entrada__campo" rows="13" cols="40">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci montes, sit et diam risus scelerisque vitae est. Tortor maecenas nunc ut laoreet. Eget diam mauris quam quisque ut eget fringilla sit elit. Libero, sodales duis fames id diam feugiat aliquet non egestas.</textarea>
 
-        <div class="entrada__observacao">
-        <p class="entrada__observacao__iconeAtencao">!</p>
-        <p class="entrada__observacao__texto">Apenas letras minúsculas e sem acento.</p>
-        </div>
-        <div class="entrada__botoes">
-        <button type="submit" value="Criptografar">Criptografar</button>
-        <button type="submit" value="Descriptografar">Descriptografar</button>
-        </div>
-    </form>
-</section>
+    <div class="entrada__observacao">
+    <p class="entrada__observacao__iconeAtencao">!</p>
+    <p class="entrada__observacao__texto">Apenas letras minúsculas e sem acento.</p>
+    </div>
+    <div class="entrada__botoes">
+    <button class="entrada__botoes__escuro" type="submit" value="Criptografar">Criptografar</button>
+    <button class="entrada__botoes__claro" type="submit" value="Descriptografar">Descriptografar</button>
+    </div>
+</form>
