--- a/components/header.html
+++ b/components/header.html
@@ -1,12 +1,16 @@
-<nav class="cabecalho__menu">
-  <div class="cabecalho__menu__logo">
-    <img class="cabecalho__menu__logo__imagem" src="/assets/images/logo.png" alt="Logo da Alura">
-  </div>
-  <div class="cabecalho__menu__opcao">
-    <div class="cabecalho__menu__opcao__seletor"></div>
-  </div>
-  <div class="cabecalho__menu__opcao">
-    <div class="cabecalho__menu__opcao__seletor"></div>
-  </div>
-</nav>
+<header>
+  <nav class="menu">
+    <div class="menu__logo">
+      <img class="menu__logo__imagem" src="/assets/images/logo.png" alt="Logo da Alura">
+    </div>
+    <div class="menu__opcao">
+      <div class="menu__opcao__seletor"></div>
+    </div>
+    <div class="menu__opcao">
+      <div class="menu__opcao__seletor"></div>
+    </div>
+  </nav>
+</header>
+
+
   
