--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,10 +31,11 @@ body {
     padding: 40px;
     display: flex;
     justify-content: space-between;
+    gap: 80px;
 }
 
 /* cabecalho */
-.cabecalho__menu {
+.menu {
     width: 120px;
     box-sizing: border-box;
     display: flex;
@@ -42,16 +43,16 @@ body {
     gap: 40px;    
 }
 
-.cabecalho__menu__logo {
+.menu__logo {
     display: flex;
     justify-content: center;
 }
 
-/*.cabecalho__menu__logo__imagem {
+/*.menu__logo__imagem {
 
 }*/
 
-.cabecalho__menu__opcao {
+.menu__opcao {
     height: 176px;
     background-color: #F6F7FD;
     border-radius: 60px;
@@ -60,7 +61,7 @@ body {
     align-items: center;
 }
 
-.cabecalho__menu__opcao__seletor {
+.menu__opcao__seletor {
     width: 72px;
     height: 128px;
     background-color: #FFFFFF;
@@ -69,12 +70,24 @@ body {
 
 /* entrada */
 .entrada{
+    width: 680px;
+    padding: 128px 0 0 0;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
+    justify-content: space-between;
+    gap: 16px;
 }
 
 .entrada__campo {
-    
+    height: 667px;
+    font-family: "Inter", sans-serif;
+    font-size: 2rem;
+    color: #0A3871;
+    font-weight: 400;
+    border: 0px;
+    background-color: #F3F5FC;
+
 }
 
 .entrada__observacao {
@@ -85,7 +98,7 @@ body {
 
 .entrada__observacao__iconeAtencao {
     background-color: #65747D;
-    color: white;
+    color: #FFFFFF;
     width: 16px;
     height: 16px;
     border-radius: 8px;
@@ -98,31 +111,120 @@ body {
     font-weight: 400;
 }
 
+.entrada__botoes {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+}
+
+.entrada__botoes__escuro {
+    font-family: "Inter", sans-serif;
+    font-size: 1rem;
+    color: #FFFFFF;
+    font-weight: 400;
+    border: 1px solid;
+    background-color: #0A3871;
+    border-radius: 24px;
+    width: 328px;
+    padding: 24px;
+}
+
+.entrada__botoes__claro {
+    width: 328px;
+    padding: 24px;
+    font-family: "Inter", sans-serif;
+    font-size: 1rem;
+    color: #0A3871;
+    font-weight: 400;
+    border: 1px solid;
+    background-color: #D8DFE8;
+    border-radius: 24px;
+}
+
 /* saida */
 .saida {
     width: 400px;
     height: 944px;
-    background-color: white;
+    background-color: #FFFFFF;
     border-radius: 32px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
 }
 
 /* nenhumaMensagemEncontrada */
-.nenhumaMensagemEncontrada__titulo {
+.nenhumaMensagemEncontrada {
+    width: 336px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 32px;
+}
+
+.nenhumaMensagemEncontrada__conteudo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+
+.nenhumaMensagemEncontrada__conteudo__titulo {
     font-size: 1.5rem;
     font-weight: 700;
-    color: var(--cor-fonte-terciaria);
+    color: #343A40;
+    text-align: center;
 }
 
-.nenhumaMensagemEncontrada__descricao {
+.nenhumaMensagemEncontrada__conteudo__descricao {
     font-size: 1rem;
     font-weight: 400;
-    color: var(--cor-fonte-secundaria);
+    color: #495057;
+    text-align: center;
 }
 
-/*.footer {
+/* saidaCriptografada */
+.saidaCriptografada {
+    width: 336px;
+    background-color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 32px;
+}
 
-}*/
+.saidaCriptografada__conteudo {
+    height: 781px;
+    font-family: "Inter", sans-serif;
+    font-size: 1.5rem;
+    color: #495057;
+    font-weight: 400;
+}
+
+.saidaCriptografada__botaoCopiar {
+    width: 336px;
+    padding: 24px;
+    border: 1px solid;
+    border-radius: 24px;
+    background-color: #FFFFFF;
+    border-color: #0A3871;
+    font-family: "Inter", sans-serif;
+    font-size: 1rem;
+    color: #0A3871;
+    font-weight: 400;
+}
+
+
+/* rodape */
+.rodape {
+    font-size: 1rem;
+    color: #FFFFFF;
+    font-weight: 400;
+    background-color: #0A3871;
+    padding: 16px;
+    text-align: center;
+}
