--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,4 @@
 <footer>
-    <p>&copy; 2024 Washington Kiyoshi Yoshimatsu</p>
+    <p class="rodape">&copy; 2024 Washington Kiyoshi Yoshimatsu</p>
 </footer>
   
