--- a/components/nenhumaMensagemEncontrada.html
+++ b/components/nenhumaMensagemEncontrada.html
@@ -1,3 +1,7 @@
-<img src="/assets/images/nenhumaMensagemEncontrada.jpg" alt="Pessoa ajoelhada com lupa na mão investigando um diamante">
-<p class="nenhumaMensagemEncontrada__titulo">Nenhuma mensagem encontrada</p>
-<p class="nenhumaMensagemEncontrada__descricao">Digite um texto que você deseja criptografar ou descriptografar.</p>
+<section class="nenhumaMensagemEncontrada">
+    <img src="/assets/images/nenhumaMensagemEncontrada.jpg" alt="Pessoa ajoelhada com lupa na mão investigando um diamante">
+    <div class="nenhumaMensagemEncontrada__conteudo">
+        <p class="nenhumaMensagemEncontrada__conteudo__titulo">Nenhuma mensagem encontrada</p>
+        <p class="nenhumaMensagemEncontrada__conteudo__descricao">Digite um texto que você deseja criptografar ou descriptografar.</p>
+    </div>
+</section>
