--- a/components/entrada.html
+++ b/components/entrada.html
@@ -6,7 +6,7 @@
     <p class="entrada__observacao__texto">Apenas letras minúsculas e sem acento.</p>
     </div>
     <div class="entrada__botoes">
-    <button class="entrada__botoes__escuro" type="submit" value="Criptografar">Criptografar</button>
-    <button class="entrada__botoes__claro" type="submit" value="Descriptografar">Descriptografar</button>
+    <button onclick="criptografar()" class="entrada__botoes__criptografar" type="submit" value="Criptografar">Criptografar</button>
+    <button class="entrada__botoes__descriptografar" type="submit" value="Descriptografar">Descriptografar</button>
     </div>
 </form>
