--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ body {
 }
 
 /* saidaCriptografada */
-.apresentacao__saida__criptografado {
+.apresentacao__saida__resultado {
     width: 336px;
     background-color: #FFFFFF;
     display: flex;
@@ -264,16 +264,18 @@ body {
     gap: 32px;
 }
 
-.apresentacao__saida__criptografado__conteudo {
+.apresentacao__saida__resultado__conteudo {
+    width: 100%;
     height: 781px;
     font-family: "Inter", sans-serif;
     font-size: 1.5rem;
     color: #495057;
     font-weight: 400;
+    text-align: left;
 }
 
-.apresentacao__saida__criptografado__botaoCopiar {
-    width: 336px;
+.apresentacao__saida__resultado__botaoCopiar {
+    width: 100%;
     padding: 24px;
     border: 1px solid;
     border-radius: 24px;
